--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Netlify CMS</title>
+    <title>{{ Admin – site.title }}</title>
   </head>
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
